# static-key

./: .gitignore  CMakeLists.txt  LICENSE  README.md  static_key.c  static_key.cpp  static_key.h  static_key.hpp
.github/workflows/: linux.yml
tests/: arm.cmake  rv64.cmake  test.sh  test_cross.sh
